# web_authn_playground

./: .gitattributes  .gitignore  Dockerfile
my-svelte-project/: package-lock.json  package.json
my-svelte-project/src/: App.svelte
my-svelte-project/src/components/: Input.svelte  Login.svelte  Register.svelte
test-webauthn/: Cargo.toml  Dockerfile  TODO.md
test-webauthn/src/: actors.rs  base64_data.rs  main.rs  proto.rs
