[package]
name = "test-webauthn"
version = "0.1.0"
authors = ["Nick  Tom Thomas <nickbetty2000@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.124"
anyhow = "1.0.39"
serde_json = "1.0.64"
webauthn-rs = "0.2.5"
openssl = {version="0.10.33",optional=true}
base64 = "0.13.0"
